--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     .box {
       max-width: 400px;
       width: 100%;
-      height: 80%;
       background-color: #ffffff;
       border: 3px solid black;
       margin: 2px;
@@ -97,11 +96,12 @@
       text-align: center;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       border-radius: 5px;
+      max-height: 100%;
     }
     .camera-box img {
       max-width: 100%;
-      max-height: 500px;
-
+      max-height: 400px;
+      border: 1px black solid;
     }
     .description {
         font-size: 14px;
@@ -135,7 +135,7 @@
   </style>
 </head>
 <body>
-  <div class="warning">
+  <div class="warning" style="margin-bottom: 20px;">
     <p>ABRC DEVICE TESTING</p>
     <p>This website is under construction, it will look better</p>
 
@@ -319,7 +319,7 @@
       document.getElementById('toggleMic').addEventListener('click', toggleMic);
     </script>
 <!--cameratest-->
-    <div class="box" style="height: 412px;">
+    <div class="box" style="height: 450px;">
 
     <!DOCTYPE html>
     <html lang="en">
@@ -347,6 +347,7 @@
         }
         #switch-button {
           margin-top: 10px;
+          margin-botton: 10px;
         }
       </style>
     </head>
@@ -356,7 +357,7 @@
         <video id="video" autoplay playsinline></video>
         <div id="camera-info"></div>
       </div>
-      <button id="switch-button">Switch Camera</button>
+      <button id="switch-button" style="margin-bottom: 10px;">Switch Camera</button>
 
       <script>
         const video = document.getElementById('video');
@@ -399,7 +400,7 @@
     <!-- Keyboard Key Tester Section -->
     <div class="box" style="max-width: 600px;">
       <div>
-        <div class="warning">Keyboard Test</div>
+        <div class="warning" style="width:600px;">Keyboard Test</div>
       </div>
       <div class="key-container" id="keyContainer">
         <!-- Keys will be dynamically added here -->
@@ -488,7 +489,8 @@
     </script>
 
     <!-- Miscellaneous Section -->
-    <div class="box" style="max-width: 200px; height: 268px;">
+    <div class="box" style="max-width: 200px; paddding: 10px;margin-top:13px;" >
+      <div class="warning">Camera Test</div>
       <p>site is still being made</p>
       <p>things I would like to add</p>
       <p>mic source</p>
