--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 
     <!-- Miscellaneous Section -->
     <div class="box" style="max-width: 200px; paddding: 10px;margin-top:13px;" >
-      <div class="warning">Camera Test</div>
+      <div class="warning">Notes</div>
       <p>site is still being made</p>
       <p>things I would like to add</p>
       <p>mic source</p>
