--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>ABRC DEVICE TESTING v0.12</title>
+  <title>Device Test 1.20</title>
   <style>
     body {
       font-family: Helvetica, sans-serif;
@@ -135,9 +135,8 @@
   </style>
 </head>
 <body>
-  <div class="warning" style="margin-bottom: 20px;">
-    <p>ABRC DEVICE TESTING</p>
-    <p>This website is under construction, it will look better</p>
+  <div class="warning" style="margin-bottom: 0px;">
+    <p>Device Testing 1.20</p>
 
   </div>
   
@@ -162,8 +161,8 @@
       </div>
       <div id="visualizer"></div>
       <div>
-        <button id="pauseAll">Pause Audio</button>
-        <button id="toggleMic">Pause/Unpause Mic</button>
+        <select id="micSource"></select>
+        <button id="toggleButton">Pause Audio / Start Mic</button>
       </div>
       <div class="warning" style="background-color: orange; font-size: 14px; margin-top: 10px;">DO NOT TEST AUDIO AND MIC AT THE SAME TIME WHEN TESTING HEADPHONES</div>
     </div>
@@ -171,7 +170,7 @@
     <style>
       /* Audio/Mic Test Section CSS */
       #visualizer {
-        width: 300px;
+        width: 350px;
         height: 120px;
         background-color: green;
         border-radius: 4px;
@@ -192,6 +191,15 @@
         font-weight: bold;
         border-radius: 4px;
       }
+      #micSource {
+        margin-right: 10px;
+      }
+      button, select {
+        min-width: 100px;
+      }
+      #toggleButton {
+        min-width: 200px;
+      }
     </style>
 
     <script>
@@ -208,12 +216,33 @@
       let mediaStream;
       let analyser;
       let animationFrameId;
-      let micPaused = true;
+      let micActive = false;
+      let audioActive = true;
+
+      const micSourceSelect = document.getElementById('micSource');
+      const toggleButton = document.getElementById('toggleButton');
+
+      // Populate mic sources
+      navigator.mediaDevices.enumerateDevices()
+        .then(devices => {
+          devices.forEach(device => {
+            if (device.kind === 'audioinput') {
+              const option = document.createElement('option');
+              option.value = device.deviceId;
+              option.text = device.label || `Microphone ${micSourceSelect.length + 1}`;
+              micSourceSelect.appendChild(option);
+            }
+          });
+        });
 
       function startAudioContext() {
-        if (!audioContext && !micPaused) {
+        if (!audioContext && micActive) {
           audioContext = new AudioContext();
-          navigator.mediaDevices.getUserMedia({ audio: true })
+          navigator.mediaDevices.getUserMedia({ 
+            audio: {
+              deviceId: micSourceSelect.value ? {exact: micSourceSelect.value} : undefined
+            }
+          })
             .then(function(stream) {
               mediaStream = stream;
               const source = audioContext.createMediaStreamSource(stream);
@@ -251,7 +280,6 @@
               }
 
               draw();
-
             })
             .catch(function(err) {
               console.error('Error accessing microphone:', err);
@@ -271,13 +299,18 @@
         }
       }
 
-      function toggleMic() {
-        if (micPaused) {
-          micPaused = false;
-          startAudioContext();
-        } else {
-          micPaused = true;
+      function toggleAudioMic() {
+        if (micActive) {
+          micActive = false;
+          audioActive = true;
+          toggleButton.textContent = "Pause Audio / Start Mic";
           stopAudioContext();
+        } else {
+          micActive = true;
+          audioActive = false;
+          toggleButton.textContent = "Stop Mic";
+          pauseAllAudio();
+          startAudioContext();
         }
       }
 
@@ -296,107 +329,123 @@
 
       document.querySelectorAll('.left').forEach(button => {
         button.addEventListener('click', () => {
-          pauseAllAudio();
-          leftAudio.play();
+          if (audioActive) {
+            pauseAllAudio();
+            leftAudio.play();
+          }
         });
       });
 
       document.querySelectorAll('.right').forEach(button => {
         button.addEventListener('click', () => {
-          pauseAllAudio();
-          rightAudio.play();
+          if (audioActive) {
+            pauseAllAudio();
+            rightAudio.play();
+          }
         });
       });
 
       document.querySelectorAll('.play').forEach(button => {
         button.addEventListener('click', () => {
-          pauseAllAudio();
-          playAudio.play();
+          if (audioActive) {
+            pauseAllAudio();
+            playAudio.play();
+          }
         });
       });
 
-      document.getElementById('pauseAll').addEventListener('click', pauseAllAudio);
-      document.getElementById('toggleMic').addEventListener('click', toggleMic);
+      toggleButton.addEventListener('click', toggleAudioMic);
+      micSourceSelect.addEventListener('change', () => {
+        if (micActive) {
+          stopAudioContext();
+          startAudioContext();
+        }
+      });
     </script>
-<!--cameratest-->
-    <div class="box" style="height: 450px;">
+<div id="mainDiv">
+  <!--cameratest-->
+  <div class="box" style="height: 500px;">
+    <div class="warning">Camera Test</div>
+    <div id="video-container">
+      <video id="video" autoplay playsinline></video>
+    </div>
+    <button id="switch-button">Switch Camera</button>
 
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <div class="warning">Camera Test</div>
-      <style>
-        #video-container {
-          position: relative;
-          width: 90%;
-          height: 90%;
-        }
-        #video {
-          width: 100%;
-          height: 100%;
-        }
-        #camera-info {
-          position: absolute;
-          bottom: 10px;
-          left: 10px;
-          background: rgba(0, 0, 0, 0.5);
-          color: white;
-          padding: 5px;
-        }
-        #switch-button {
-          margin-top: 10px;
-          margin-botton: 10px;
-        }
-      </style>
-    </head>
-    <body>
+    <style>
+      .box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px;
+      }
+      .warning {
+        background-color: green;
+        width: 100%;
+        padding: 10px;
+        color: white;
+        text-align: center;
+        font-weight: bold;
+        border-radius: 4px;
+        margin-bottom: 20px;
+      }
+      #video-container {
+        width: 400px;
+        height: 400px;
+        background-color: orange;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        border-radius: 8px;
+      }
+      #video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      #switch-button {
+        margin-top: 20px;
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+      }
+    </style>
 
-      <div id="video-container">
-        <video id="video" autoplay playsinline></video>
-        <div id="camera-info"></div>
-      </div>
-      <button id="switch-button" style="margin-bottom: 10px;">Switch Camera</button>
+    <script>
+      const video = document.getElementById('video');
+      const switchButton = document.getElementById('switch-button');
+      let currentFacingMode = 'user'; // Start with front camera
 
-      <script>
-        const video = document.getElementById('video');
-        const cameraInfo = document.getElementById('camera-info');
-        const switchButton = document.getElementById('switch-button');
-        let currentFacingMode = 'user'; // Start with front camera
+      function startCamera(facingMode) {
+        navigator.mediaDevices.getUserMedia({ video: { facingMode: facingMode } })
+          .then(stream => {
+            video.srcObject = stream;
+            video.style.display = 'block';
+          })
+          .catch(error => {
+            console.error('Error accessing camera:', error);
+            video.style.display = 'none';
+          });
+      }
 
-        function startCamera(facingMode) {
-          navigator.mediaDevices.getUserMedia({ video: { facingMode: facingMode } })
-            .then(stream => {
-              video.srcObject = stream;
-              const track = stream.getVideoTracks()[0];
-              const settings = track.getSettings();
-              cameraInfo.textContent = `Camera: ${settings.label} | Resolution: ${settings.width}x${settings.height}`;
-            })
-            .catch(error => console.error('Error accessing camera:', error));
-        }
-
-        switchButton.addEventListener('click', () => {
-          // Stop the current stream
-          const stream = video.srcObject;
+      switchButton.addEventListener('click', () => {
+        // Stop the current stream
+        const stream = video.srcObject;
+        if (stream) {
           const tracks = stream.getTracks();
           tracks.forEach(track => track.stop());
-
-          // Toggle the camera facing mode
-          currentFacingMode = currentFacingMode === 'user' ? 'environment' : 'user';
-          startCamera(currentFacingMode);
-        });
-
-        // Start the camera initially
+        }
+        // Toggle the camera facing mode
+        currentFacingMode = currentFacingMode === 'user' ? 'environment' : 'user';
         startCamera(currentFacingMode);
-      </script>
+      });
 
-    </body>
-    </html>
-
-    </div>
+      // Start the camera initially
+      startCamera(currentFacingMode);
+    </script>
   </div>
-  <div id="mainDiv">
+</div>
     <!-- Keyboard Key Tester Section -->
     <div class="box" style="max-width: 600px;">
       <div>
