--- a/index.html
+++ b/index.html
@@ -134,15 +134,18 @@
     background-color: #e0e0e0;
   </style>
 </head>
-<body>
+<body style="margin-right: 10px;" >
+<div>
   <div class="warning" style="margin-bottom: 0px;">
     <p>Device Testing 1.20</p>
 
   </div>
   
+  
   <div id="mainDiv">
+  
     <!-- Audio/Mic Test Section -->
-    <div class="box">
+    <div class="box" style="margin-top: 20px;" >
       <div class="warning">Alarm/Mic Test</div>
       <div>
         <button class="left">&#9664;</button>
@@ -364,7 +367,7 @@
     </script>
 <div id="mainDiv">
   <!--cameratest-->
-  <div class="box" style="height: 500px;">
+  <div class="box" style="height: 500px; margin-top: 20px;">
     <div class="warning">Camera Test</div>
     <div id="video-container">
       <video id="video" autoplay playsinline></video>
@@ -446,6 +449,7 @@
     </script>
   </div>
 </div>
+
     <!-- Keyboard Key Tester Section -->
     <div class="box" style="max-width: 600px;">
       <div>
@@ -539,12 +543,7 @@
 
     <!-- Miscellaneous Section -->
     <div class="box" style="max-width: 200px; paddding: 10px;margin-top:13px;" >
-      <div class="warning">Notes</div>
-      <p>site is still being made</p>
-      <p>things I would like to add</p>
-      <p>mic source</p>
-      <p>better looking ui</p>
-      <p>keyboard overhaul</p>
+      <div class="warning">:)</div>
     </div>
   </div>
 </div>
