--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <div style="color: blue;">
         <button class="left3">&#9664;</button>
         <button class="play3">&#9664; &#9654;</button>
-        <button class="right">&#9654;</button>
+        <button class="right3">&#9654;</button>
       </div>
       <div id="visualizer"></div>
       <div>
