--- a/index.html
+++ b/index.html
@@ -188,11 +188,17 @@
         <button class="right3">&#9654;</button>
       </div>
       <div id="visualizer"></div>
-      <div>
-        <select id="micSource"> </select>  
+     
+
+      <div style="display: flex; align-items: center; justify-content: space-between;">
+    <div style="flex: 1; margin-right: 10px;">
+      <select id="micSource"> </select>  
+    </div>
+    <select style="flex-shrink: 0; max-width: 200px;">
         <button id="toggleButton">Pause Audio / Start Mic</button>
-      </div>
-      <div class="warning" style="background-color: orange; font-size: 14px; margin-top: 10px;">DO NOT TEST AUDIO AND MIC AT THE SAME TIME WHEN TESTING HEADPHONES</div>
+    </select>
+</div>
+      <div class="warning" style="background-color: orange; font-size: 14px; margin-top: 10px;">:)</div>
     </div>
 
     <style>
