--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       #visualizer {
         width: 350px;
         height: 120px;
-        background-color: green;
+        background-color: orange;
         border-radius: 4px;
         position: relative;
       }
