--- a/index.html
+++ b/index.html
@@ -194,9 +194,7 @@
     <div style="flex: 1; margin-right: 10px;">
       <select id="micSource"> </select>  
     </div>
-    <select style="flex-shrink: 0; max-width: 200px;">
-        <button id="toggleButton">Pause Audio / Start Mic</button>
-    </select>
+        <button id="toggleButton" style="flex-shrink: 0; max-width: 200px;" >Pause Audio / Start Mic</button>
 </div>
       <div class="warning" style="background-color: orange; font-size: 14px; margin-top: 10px;">:)</div>
     </div>
