--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       height: 120px;
       border-radius: 5px;
       overflow: hidden;
-      background-color: green; /* Change this to the desired green color */
+      background-color: green; 
 
       color: green;
       margin-top: 20px;
@@ -192,9 +192,10 @@
 
       <div style="display: flex; align-items: center; justify-content: space-between;">
     <div style="flex: 1; margin-right: 10px;">
+      <p> Mic Source: </p>
       <select id="micSource"> </select>  
     </div>
-        <button id="toggleButton" style="flex-shrink: 0; max-width: 200px;" >Pause Audio / Start Mic</button>
+        <button id="toggleButton" style="flex-shrink: 0; max-width: 200px;" >Pause/Start Mic</button>
 </div>
       <div class="warning" style="background-color: orange; font-size: 14px; margin-top: 10px;">:)</div>
     </div>
