--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </div>
         <button id="toggleButton" style="flex-shrink: 0; max-width: 200px;" >Pause/Start Mic</button>
 </div>
-      <div class="warning" style="background-color: orange; font-size: 14px; margin-top: 10px;">:)</div>
+      <div class="warning" style="background-color: orange; font-size: 14px; margin-top: 10px;">Audio Will Only Work if Mic is Paused</div>
     </div>
 
     <style>
