--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <button class="right2">&#9654;</button>
       </div>
       <div style="color: blue;">
-        <button class="left3">&#9664;</button>
+        <button class="left3" style="height: 10px;">&#9664;</button>
         <button class="play3">&#9664; &#9654;</button>
         <button class="right3">&#9654;</button>
       </div>
