--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     }
     select {
     font-family: Helvetica, sans-serif;
-    font-size: 16px;
-    padding: 10px;
-    margin: 10px 0;
+    font-size: 13px;
+    padding: 5px;
+    margin: 0px 0;
     border: 2px solid #dddddd;
     border-radius: 5px;
     background-color: #ffffff;
@@ -183,9 +183,9 @@
         <button class="right2">&#9654;</button>
       </div>
       <div style="color: blue;">
-        <button class="left3" style="height: 10px;">&#9664;</button>
+        <button class="left3" >&#9664;</button>
         <button class="play3">&#9664; &#9654;</button>
-        <button class="right3">&#9654;</button>
+        <button class="right3" style="height: 25px;">&#9654;</button>
       </div>
       <div id="visualizer"></div>
      
