--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       justify-content: center;
     }
     button {
-      background-color: #4CAF50;
+      background-color: green;
       border: none;
       color: white;
       padding: 10px 20px;
@@ -66,12 +66,12 @@
     }
     select {
     font-family: Helvetica, sans-serif;
-    font-size: 13px;
-    padding: 5px;
-    margin: 0px 0;
+    font-size: 16px;
+    padding: 7px;
+    margin-top: 10px;
     border: 2px solid #dddddd;
     border-radius: 5px;
-    background-color: #ffffff;
+    background-color: green;
     color: #333333;
     width: 100%;
     box-sizing: border-box;
@@ -175,17 +175,17 @@
       <div>
         <button class="left">&#9664;</button>
         <button class="play">&#9664; &#9654;</button>
-        <button class="right">&#9654;</button>
+        <button class="right" style="height: 43px;" >&#9654;</button>
       </div>
       <div style="color: red;">
         <button class="left2">&#9664;</button>
         <button class="play2">&#9664; &#9654;</button>
-        <button class="right2">&#9654;</button>
+        <button class="right2" style="height: 43px;" >&#9654;</button>
       </div>
       <div style="color: blue;">
         <button class="left3" >&#9664;</button>
         <button class="play3">&#9664; &#9654;</button>
-        <button class="right3" style="height: 25px;">&#9654;</button>
+        <button class="right3" style="height: 43px;">&#9654;</button>
       </div>
       <div id="visualizer"></div>
      
@@ -202,7 +202,7 @@
     <style>
       /* Audio/Mic Test Section CSS */
       #visualizer {
-        width: 350px;
+        width: 320px;
         height: 120px;
         background-color: orange;
         border-radius: 4px;
