--- a/index.html
+++ b/index.html
@@ -562,95 +562,223 @@
   </div>
 </div>
 
-    <!-- Keyboard Key Tester Section -->
-    <div class="box" style="max-width: 600px;">
-      <div>
-        <div class="warning" style="width:600px;">Keyboard Test</div>
-      </div>
-      <div class="key-container" id="keyContainer">
-        <!-- Keys will be dynamically added here -->
-      </div>
-    </div>
     <style>
-      /* Keyboard Key Tester Section CSS */
-      .keyboard-key {
-        width: 30px;
-        height: 30px;
-        margin: 2px;
-        display: inline-block;
-        text-align: center;
-        line-height: 30px;
-        border: 1px solid black;
-        background-color: white;
-      }
-      .keyboard-key.wide {
-        width: 60px;
-      }
-      .keyboard-key.space {
-        width: 200px;
-      }
-      .key-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-      }
-      .key-row {
-        display: flex;
-      }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        #keyboard {
+            background-color: #e0e0e0;
+            border-radius: 10px;
+            padding: 20px;
+            display: grid;
+            grid-template-columns: repeat(15, 1fr);
+            gap: 5px;
+            max-width: 1000px;
+        }
+        .key {
+            width: 50px;
+            height: 50px;
+            background-color: #ffffff;
+            border: 1px solid #cccccc;
+            border-radius: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 12px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .key.pressed {
+            background-color: orange;
+        }
+        .key.released {
+            background-color: #90EE90;
+        }
+        .wide {
+            grid-column: span 2;
+            width: 105px;
+        }
+        .extra-wide {
+            grid-column: span 5;
+            width: 265px;
+        }
+        .arrow-keys {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            gap: 5px;
+            grid-column: span 3;
+        }
+        .arrow-key {
+            font-size: 20px;
+        }
+        .symbol {
+            font-size: 18px;
+        }
+        .placeholder {
+            visibility: hidden;
+        }
     </style>
+</head>
+<body>
+    <div id="keyboard"></div>
+
     <script>
-      // Keyboard Key Tester Section Script
-      const keyContainer = document.getElementById('keyContainer');
+        const keyLayout = [
+            [
+                { code: 'Escape', label: 'esc' },
+                { code: 'F1', label: 'F1' },
+                { code: 'F2', label: 'F2' },
+                { code: 'F3', label: 'F3' },
+                { code: 'F4', label: 'F4' },
+                { code: 'F5', label: 'F5' },
+                { code: 'F6', label: 'F6' },
+                { code: 'F7', label: 'F7' },
+                { code: 'F8', label: 'F8' },
+                { code: 'F9', label: 'F9' },
+                { code: 'F10', label: 'F10' },
+                { code: 'F11', label: 'F11' },
+                { code: 'F12', label: 'F12' },
+                { code: 'Insert', label: 'ins' },
+                { code: 'Delete', label: 'del' }
+            ],
+            [
+                { code: 'Backquote', label: '`' },
+                { code: 'Digit1', label: '1' },
+                { code: 'Digit2', label: '2' },
+                { code: 'Digit3', label: '3' },
+                { code: 'Digit4', label: '4' },
+                { code: 'Digit5', label: '5' },
+                { code: 'Digit6', label: '6' },
+                { code: 'Digit7', label: '7' },
+                { code: 'Digit8', label: '8' },
+                { code: 'Digit9', label: '9' },
+                { code: 'Digit0', label: '0' },
+                { code: 'Minus', label: '-' },
+                { code: 'Equal', label: '=' },
+                { code: 'Backspace', label: 'delete', wide: true }
+            ],
+            [
+                { code: 'Tab', label: 'tab', wide: true },
+                { code: 'KeyQ', label: 'Q' },
+                { code: 'KeyW', label: 'W' },
+                { code: 'KeyE', label: 'E' },
+                { code: 'KeyR', label: 'R' },
+                { code: 'KeyT', label: 'T' },
+                { code: 'KeyY', label: 'Y' },
+                { code: 'KeyU', label: 'U' },
+                { code: 'KeyI', label: 'I' },
+                { code: 'KeyO', label: 'O' },
+                { code: 'KeyP', label: 'P' },
+                { code: 'BracketLeft', label: '[' },
+                { code: 'BracketRight', label: ']' },
+                { code: 'Backslash', label: '\\' }
+            ],
+            [
+                { code: 'CapsLock', label: 'caps lock', wide: true },
+                { code: 'KeyA', label: 'A' },
+                { code: 'KeyS', label: 'S' },
+                { code: 'KeyD', label: 'D' },
+                { code: 'KeyF', label: 'F' },
+                { code: 'KeyG', label: 'G' },
+                { code: 'KeyH', label: 'H' },
+                { code: 'KeyJ', label: 'J' },
+                { code: 'KeyK', label: 'K' },
+                { code: 'KeyL', label: 'L' },
+                { code: 'Semicolon', label: ';' },
+                { code: 'Quote', label: "'" },
+                { code: 'Enter', label: 'return', wide: true }
+            ],
+            [
+                { code: 'ShiftLeft', label: 'shift', wide: true },
+                { code: 'KeyZ', label: 'Z' },
+                { code: 'KeyX', label: 'X' },
+                { code: 'KeyC', label: 'C' },
+                { code: 'KeyV', label: 'V' },
+                { code: 'KeyB', label: 'B' },
+                { code: 'KeyN', label: 'N' },
+                { code: 'KeyM', label: 'M' },
+                { code: 'Comma', label: ',' },
+                { code: 'Period', label: '.' },
+                { code: 'ArrowUp', label: '▲', className: 'arrow-key' },
+                { code: 'Slash', label: '/' },
+                { code: 'ShiftRight', label: 'shift', wide: true }
+            ],
+            [
+                //{ code: 'ControlLeft', label: '⌃', className: 'symbol' },
+                { code: 'AltLeft', label: '⌥', className: 'symbol' },
+                { code: 'MetaLeft', label: '⌘', className: 'symbol' },
+                { code: 'Space', label: 'space', extra_wide: true },
+                { code: 'MetaRight', label: '⌘', className: 'symbol' },
+                { code: 'AltRight', label: '⌥', className: 'symbol' },
+                { code: 'Blank', label: ' ', className: 'symbol' },
+                { code: 'ArrowLeft', label: '◀', className: 'arrow-key' },
+{ code: 'ArrowDown', label: '▼', className: 'arrow-key' },
+{ code: 'ArrowRight', label: '▶', className: 'arrow-key' }
+            ]
+        ];
 
-      const keyLayout = [
-        ['Esc', 'F1', 'F2', 'F3', 'F4', 'F5', 'F6', 'F7', 'F8', 'F9', 'F10', 'F11', 'F12'],
-        ['`', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0', '-', '=', 'Backspace'],
-        ['Tab', 'Q', 'W', 'E', 'R', 'T', 'Y', 'U', 'I', 'O', 'P', '[', ']', '\\'],
-        ['CapsLock', 'A', 'S', 'D', 'F', 'G', 'H', 'J', 'K', 'L', ';', '\'', 'Enter'],
-        ['Shift', 'Z', 'X', 'C', 'V', 'B', 'N', 'M', ',', '.', '/', 'ShiftRight', 'ArrowUp'],
-        ['Ctrl', 'Win', 'Alt', 'Space', 'Alt', 'Win', 'Menu', 'Ctrl', 'ArrowLeft', 'ArrowDown', 'ArrowRight']
-      ];
+        const keyboard = document.getElementById('keyboard');
 
-      keyLayout.forEach(row => {
-        const rowDiv = document.createElement('div');
-        rowDiv.classList.add('key-row');
-        row.forEach(key => {
-          const keyDiv = document.createElement('div');
-          keyDiv.classList.add('keyboard-key');
-          if (key === 'Backspace' || key === 'Tab' || key === 'CapsLock' || key === 'Enter' || key === 'Shift' || key === 'ShiftRight' || key === 'Space') {
-            keyDiv.classList.add('wide');
-          }
-          if (key === 'Space') {
-            keyDiv.classList.add('space');
-          }
-          keyDiv.textContent = key;
-          keyDiv.id = `key-${key.toUpperCase()}`;
-          rowDiv.appendChild(keyDiv);
+        keyLayout.forEach(row => {
+            row.forEach(key => {
+                if (key.className === 'arrow-keys') {
+                    const arrowKeysContainer = document.createElement('div');
+                    arrowKeysContainer.className = 'arrow-keys';
+                        
+
+                    // Add a placeholder for the top-left cell
+                    const placeholder = document.createElement('div');
+                    placeholder.className = 'key placeholder';
+                    arrowKeysContainer.appendChild(placeholder);
+
+                    arrowKeys.forEach(arrowKey => {
+                        const keyElement = document.createElement('div');
+                        keyElement.className = `key ${arrowKey.className}`;
+                        keyElement.textContent = arrowKey.label;
+                        keyElement.dataset.code = arrowKey.code;
+                        arrowKeysContainer.appendChild(keyElement);
+                    });
+
+                    keyboard.appendChild(arrowKeysContainer);
+                } else {
+                    const keyElement = document.createElement('div');
+                    keyElement.className = 'key';
+                    if (key.className) keyElement.classList.add(key.className);
+                    keyElement.textContent = key.label;
+                    keyElement.dataset.code = key.code;
+
+                    if (key.wide) keyElement.classList.add('wide');
+                    if (key.extra_wide) keyElement.classList.add('extra-wide');
+
+                    keyboard.appendChild(keyElement);
+                }
+            });
         });
-        keyContainer.appendChild(rowDiv);
-      });
 
-      const keyMap = {};
-      keyLayout.flat().forEach(key => {
-        keyMap[key.toUpperCase()] = document.getElementById(`key-${key.toUpperCase()}`);
-      });
+        document.addEventListener('keydown', (event) => {
+            event.preventDefault();
+            const key = document.querySelector(`.key[data-code="${event.code}"]`);
+            if (key) {
+                key.classList.add('pressed');
+                key.classList.remove('released');
+            }
+        });
 
-      document.addEventListener('keydown', (event) => {
-        const key = event.key.toUpperCase();
-        const keyDiv = keyMap[key];
-        if (keyDiv) {
-          keyDiv.style.backgroundColor = 'orange';
-        }
-      });
-
-      document.addEventListener('keyup', (event) => {
-        const key = event.key.toUpperCase();
-        const keyDiv = keyMap[key];
-        if (keyDiv) {
-          keyDiv.style.backgroundColor = 'green';
-        }
-      });
+        document.addEventListener('keyup', (event) => {
+            event.preventDefault();
+            const key = document.querySelector(`.key[data-code="${event.code}"]`);
+            if (key) {
+                key.classList.remove('pressed');
+                key.classList.add('released');
+            }
+        });
     </script>
 
     <!-- Miscellaneous Section -->
