--- a/index.html
+++ b/index.html
@@ -562,6 +562,8 @@
   </div>
 </div>
 
+<div id="mainDiv">
+
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -573,7 +575,7 @@
             margin: 0;
         }
         #keyboard {
-            background-color: #e0e0e0;
+            background-color: white;
             border-radius: 10px;
             padding: 20px;
             display: grid;
@@ -584,7 +586,7 @@
         .key {
             width: 50px;
             height: 50px;
-            background-color: #ffffff;
+            background-color: Green;
             border: 1px solid #cccccc;
             border-radius: 5px;
             display: flex;
@@ -595,10 +597,10 @@
             transition: background-color 0.3s;
         }
         .key.pressed {
-            background-color: orange;
+            background-color: #90EE90;
         }
         .key.released {
-            background-color: #90EE90;
+            background-color: Orange;
         }
         .wide {
             grid-column: span 2;
@@ -780,11 +782,9 @@
             }
         });
     </script>
+</div>
 
-    <!-- Miscellaneous Section -->
-    <div class="box" style="max-width: 200px; paddding: 10px;margin-top:13px;" >
-      <div class="warning">:)</div>
-    </div>
+ 
   </div>
 </div>
 </body>
