--- a/index.html
+++ b/index.html
@@ -714,12 +714,12 @@
             ],
             [
                 //{ code: 'ControlLeft', label: '⌃', className: 'symbol' },
+                { code: 'ControlLeft', label: '⌃', className: 'symbol' },
                 { code: 'AltLeft', label: '⌥', className: 'symbol' },
                 { code: 'MetaLeft', label: '⌘', className: 'symbol' },
                 { code: 'Space', label: 'space', extra_wide: true },
                 { code: 'MetaRight', label: '⌘', className: 'symbol' },
                 { code: 'AltRight', label: '⌥', className: 'symbol' },
-                { code: 'Blank', label: ' ', className: 'symbol' },
                 { code: 'ArrowLeft', label: '◀', className: 'arrow-key' },
 { code: 'ArrowDown', label: '▼', className: 'arrow-key' },
 { code: 'ArrowRight', label: '▶', className: 'arrow-key' }
