--- a/index.html
+++ b/index.html
@@ -647,8 +647,8 @@
                 { code: 'F10', label: 'F10' },
                 { code: 'F11', label: 'F11' },
                 { code: 'F12', label: 'F12' },
-                { code: 'Insert', label: 'ins' },
-                { code: 'Delete', label: 'del' }
+                //{ code: 'Insert', label: 'ins' },
+                //{ code: 'Delete', label: 'del' }
             ],
             [
                 { code: 'Backquote', label: '`' },
